fix white space wrapping bug.

--- a/src/Components/Formula.css
+++ b/src/Components/Formula.css
@@ -40,7 +40,8 @@
 .invisible-scrollbar{
   display: block;
   width: 250px;
-  overflow: auto;
+  overflow-x: auto;
+  white-space: nowrap;
 }
 
 .invisible-scrollbar::-webkit-scrollbar {
